# orion-error

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGLOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  book.toml  orion_error_source_frame_metadata_pr.md
.github/workflows/: ci.yml  pages.yml  release.yml  site-pages.yml
_gal/: adm.gxl  ver.gxl  work.gxl
docs/: 0.8-breaking-plan.md  0.9-design-plan.md  LOGGING.md  README.md  README.zh-CN.md  SUMMARY.md  api-contract.md  design-constraints.md  ecosystem-comparison.md  index.html  orion-error-mini-rfc.md  protocol-contract.md  public-surface-grading.md  reason-identity-guide.md  release-checklist.md  report-exposure-boundary.md  stable-snapshot-schema.md  thiserror-comparison.md  tutorial.md  v1-closure-summary.md  v1-fix-and-review-plan.md  v1-migration-checklist.md  v2-bridge-source-payload.md  v2-compat-deprecation-plan.md  v2-development-plan.md  v2-runtime-snapshot-report-layering.md  v2-stable-snapshot-schema.md  v3-protocol-contract.md
docs/_archive/rfc/: README.md  orion-error-diagnostic-protocol-evolution.md  v2-compat-deprecation-plan.md  v2-structerror-stderror-strategy.md  v3-stable-code-policy.md
docs/archive/rfc/: orion-error-mini-rfc.md  v1-closure-summary.md  v1-fix-and-review-plan.md  v1-migration-checklist.md  v2-bridge-source-payload.md  v2-development-plan.md  v3-minimum-plan.md
docs/dev/: api-contract.md  public-surface-grading.md
docs/dev-en/: api-contract.md  public-surface-grading.md
docs/en/: book.toml  page-toc.js
docs/en/src/: README.md  SUMMARY.md
docs/error-handling/: 01-error-classification.md  03-error-aggregation.md  05-logging-standards.md  06-best-practices.md  07-monitoring-metrics.md  08-recovery-patterns.md  README.md
docs/perf/: structerror-allocation.md  structerror-source-debug.md
docs/user/: ecosystem-comparison.md  protocol-contract.md  reason-identity-guide.md  report-exposure-boundary.md  thiserror-comparison.md  tutorial.md  why-orion-error.md
docs/user-en/: LOGGING.md  design-constraints.md  ecosystem-comparison.md  protocol-contract.md  report-exposure-boundary.md  stable-snapshot-schema.md  thiserror-comparison.md  tutorial.md  why-orion-error.md
docs/zh/: book.toml  page-toc.js
docs/zh/src/: README.md  SUMMARY.md
docs/zh/theme/: reading.css
examples/: logging_example.rs  order_case.md  order_case.rs
orion-error-derive/: ATTRIBUTES.md  Cargo.toml  README.md
orion-error-derive/src/: attrs.rs  constructors.rs  display.rs  domain.rs  error_code.rs  identity.rs  lib.rs  patterns.rs  upcast.rs
scripts/: check-doc-code.sh  check-feature-matrix.sh  check-v3-policy.sh
site/: index.html  styles.css
site/api/: index.html
site/compare/: index.html
site/tutorial/: index.html
src/: lib.rs  testcase.rs  testing.rs
src/core/: case.rs  cli.rs  context.rs  domain.rs  error.rs  metadata.rs  mod.rs  reason.rs  report.rs  serde.rs  snapshot.rs  universal.rs
src/core/context/: basics.rs  conversion.rs  convert.rs  logging.rs  metadata.rs  mod.rs  pathing.rs  tests.rs  types.rs
src/core/error/: builder.rs  carrier.rs  identity.rs  mod.rs  runtime.rs  source.rs  source_chain.rs  std_bridge.rs  (+1 more)
src/traits/: contextual.rs  conversion.rs  into_as.rs  mod.rs  owenance.rs  source_err.rs
tests/: golden_protocol.rs  perf_context_allocation.rs  test_error_identity_derive.rs  test_error_owe.rs  test_layered_exports.rs  test_v3_identity_exposure.rs  test_v3_identity_policy.rs  test_versioned_namespaces.rs
(+53 files in other folders)
