[package]
name = "orion-error"
version = "0.8.1" #@gxl:set(version)
edition = "2021"
authors = ["Orion Contributors <sec-wukong@outlook.com>"]
description = "Structured error governance for layered Rust systems"
license = "MIT"
repository = "https://github.com/galaxio-labs/orion-error"
keywords = ["error", "rust-patterns", "observability", "service"]
categories = ["rust-patterns"]

[features]
default = ["log", "derive"]
# Derive macros for `ErrorCode` and `ErrorIdentityProvider`.
derive = ["dep:orion-error-derive"]
# Log integration via the `log` crate (enables `OperationContext` log
# methods and Drop output).
log = ["dep:log"]
# Tracing integration via the `tracing` crate.
tracing = ["dep:tracing"]
serde = ["dep:serde"]
anyhow = ["dep:anyhow"]
serde_json = ["dep:serde_json", "serde"]
toml = ["dep:toml"]

[dependencies]
orion-error-derive = { version = "0.8.0", path = "orion-error-derive", optional = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
smol_str = { version = "0.3", features = ["serde"] }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
anyhow = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "1.0", optional = true }


[dev-dependencies]
derive_more = { version = "2.1", features = ["from"] }
parse-display-derive = "0.10"
serde_json = "1.0"
env_logger = "0.11"

[[example]]
name = "order_case"
required-features = ["derive"]
