[package]
name = "orion-error-derive"
version = "0.7.0"
edition = "2021"
authors = ["wukong <sec-wukong@outlook.com>"]
description = "Derive macros for orion-error"
license = "MIT"
repository = "https://github.com/galaxio-labs/orion-error"
readme = "README.md"
documentation = "https://docs.rs/orion-error-derive"
keywords = ["error", "derive", "proc-macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
